# OpenArkCompiler

src/: BUILD.gn
src/maple_driver/include/: driver_runner.h  mpl_options.h  usages.h
src/maple_driver/src/: driver_runner.cpp  maple_comb_compiler.cpp  mpl_options.cpp
src/maple_ipa/include/: interleaved_manager.h  module_phase.h
src/maple_ipa/src/: interleaved_manager.cpp
src/maple_me/include/: me_phase.h
src/maple_me/src/: me_alias_class.cpp
src/maple_phase/include/: phase.h
src/mapleall/maple_be/: BUILD.gn
src/mapleall/maple_be/include/be/: lower.h
src/mapleall/maple_be/include/cg/: asm_info.h  cg_cfg.h  cg_dominance.h  cg_option.h  cg_phase.h  cg_phasemanager.h  cgbb.h  cgfunc.h  emit.h  insn.h  loop.h  operand.h  ra_opt.h  reaching.h
src/mapleall/maple_be/src/be/: becommon.cpp  lower.cpp  switch_lowerer.cpp
src/mapleall/maple_be/src/cg/: args.cpp  cfgo.cpp  cfi.cpp  cg_cfg.cpp  cg_dominance.cpp  cg_occur.cpp  cg_option.cpp  cg_phasemanager.cpp  cg_pre.cpp  cgbb.cpp  cgfunc.cpp  ebo.cpp  eh_func.cpp  (+15 more)
src/mapleall/maple_driver/include/: as_option.h  compiler.h  cpp2mpl_option.h  driver_runner.h
src/mapleall/maple_driver/src/: clang_compiler.cpp  cpp2mpl_compiler.cpp  driver_runner.cpp  maple_comb_compiler.cpp  mpl_options.cpp  mplcg_compiler.cpp
src/mapleall/maple_ipa/: BUILD.gn
src/mapleall/maple_ipa/include/: call_graph.h  clone.h  do_ipa_escape_analysis.h  foo.h  inline.h  ipa_option.h  ipa_phase_manager.h  method_replace.h  module_phase_manager.h  prop_return_null.h  retype.h
src/mapleall/maple_ipa/src/: call_graph.cpp  clone.cpp  do_ipa_escape_analysis.cpp  foo.cpp  inline.cpp  ipa_phase_manager.cpp  method_replace.cpp  module_phase_manager.cpp  prop_return_null.cpp
src/mapleall/maple_ir/include/: all_attributes.def  bin_mpl_export.h  binary_op.def  debug_info.h  intrinsic_c.def  ir_safe_cast_traits.def  java_eh_lower.h  keywords.def  mir_builder.h  mir_const.h  mir_function.h  mir_nodes.h  mir_parser.h  mir_preg.h  mir_symbol.h  mir_type.h  opcode_info.h  opcodes.def  opcodes.h  option.h  verification.h  verify_mark.h
src/mapleall/maple_ir/src/: bin_func_export.cpp  bin_func_import.cpp  bin_mpl_export.cpp  bin_mpl_import.cpp  debug_info.cpp  mir_builder.cpp  mir_const.cpp  mir_function.cpp  mir_lower.cpp  mir_module.cpp  mir_nodes.cpp  mir_parser.cpp  mir_symbol.cpp  mir_type.cpp  option.cpp  parser.cpp  verify_mark.cpp
src/mapleall/maple_me/: BUILD.gn
src/mapleall/maple_me/include/: alias_class.h  cast_opt.h  cfg_opt.h  copy_prop.h  demand_driven_alias_analysis.h  dominance.h  dse.h  ipa_side_effect.h  irmap.h  irmap_build.h  lfo_dep_test.h  lfo_inject_iv.h  lfo_iv_canon.h  lfo_loop_vec.h  lfo_pre_emit.h  me_abco.h  me_alias_class.h  me_analyze_rc.h  me_analyzector.h  me_bb_analyze.h  me_bb_layout.h  me_bypath_eh.h  me_cfg.h  me_check_cast.h  me_cond_based.h  me_cond_based_npc.h  me_cond_based_rc.h  me_critical_edge.h  me_dominance.h  me_dse.h  me_fsaa.h  me_func_opt.h  me_function.h  me_gc_lowering.h  me_gc_write_barrier_opt.h  me_hdse.h  me_ir.h  me_irmap.h  me_loop_analysis.h  me_loop_canon.h  (+26 more)
src/mapleall/maple_me/src/: alias_class.cpp  cast_opt.cpp  cfg_opt.cpp  copy_prop.cpp  demand_driven_alias_analysis.cpp  dse.cpp  func_emit.cpp  hdse.cpp  ipa_side_effect.cpp  irmap.cpp  irmap_build.cpp  irmap_emit.cpp  lfo_dep_test.cpp  lfo_inject_iv.cpp  lfo_iv_canon.cpp  lfo_loop_vec.cpp  lfo_pre_emit.cpp  me_abco.cpp  me_alias_class.cpp  me_analyze_rc.cpp  me_analyzector.cpp  me_bb_layout.cpp  me_bypath_eh.cpp  me_cfg.cpp  me_cfg_opt.cpp  me_check_cast.cpp  me_cond_based_opt.cpp  me_critical_edge.cpp  me_delegate_rc.cpp  me_dominance.cpp  me_dse.cpp  me_emit.cpp  me_fsaa.cpp  me_func_opt.cpp  me_function.cpp  me_gc_lowering.cpp  me_gc_write_barrier_opt.cpp  me_hdse.cpp  me_ir.cpp  me_irmap_build.cpp  (+35 more)
src/mapleall/maple_phase/include/: maple_phase.h  maple_phase_manager.h  maple_phase_support.h  phase_impl.h  phases.def
src/mapleall/maple_phase/src/: maple_phase_manager.cpp  maple_phase_support.cpp
src/mapleall/maple_util/include/: version.h
src/mapleall/mpl2mpl/: BUILD.gn
src/mapleall/mpl2mpl/include/: annotation_analysis.h  barrierinsertion.h  class_hierarchy.h  class_init.h  coderelayout.h  constantfold.h  gen_check_cast.h  java_intrn_lowering.h  muid_replacement.h  native_stub_func.h  preme.h  reflection_analysis.h  scalarreplacement.h  simplify.h  vtable_analysis.h  vtable_impl.h
src/mapleall/mpl2mpl/src/: annotation_analysis.cpp  barrierinsertion.cpp  class_hierarchy.cpp  class_init.cpp  coderelayout.cpp  constantfold.cpp  gen_check_cast.cpp  java_eh_lower.cpp  java_intrn_lowering.cpp  muid_replacement.cpp  native_stub_func.cpp  openProfile.cpp  preme.cpp  reflection_analysis.cpp  scalarreplacement.cpp  simplify.cpp  update_mplt.cpp  vtable_analysis.cpp  vtable_impl.cpp
src/mplfe/: BUILD.gn
src/mplfe/ast_input/include/: ast_decl.h  ast_decl_builder.h  ast_expr.h  ast_op.h  ast_parser.h  ast_stmt.h  builtin_func_emit.def
src/mplfe/ast_input/lib/: ast_interface.cpp  ast_interface.h  ast_type.cpp
src/mplfe/ast_input/src/: ast_decl.cpp  ast_expr.cpp  ast_parser.cpp  ast_parser_builting_func.cpp  ast_stmt.cpp  ast_struct2fe_helper.cpp
src/mplfe/common/include/: enhance_c_checker.h  fe_options.h  fe_struct_elem_info.h  feir_builder.h  feir_stmt.h  feir_type.h  feir_var.h  feir_var_name.h  feir_var_reg.h  mplfe_options.h
src/mplfe/common/src/: enhance_c_checker.cpp  feir_builder.cpp  feir_stmt.cpp  feir_type.cpp  feir_var_name.cpp  feir_var_reg.cpp  feir_var_type_scatter.cpp  mplfe_options.cpp
src/mplfe/optimize/include/: ror.h
src/mplfe/test/: BUILD.gn  mplfeUT_check.sh
src/mplfe/test/ast_input/: ast_expr_test.cpp
src/mplfe/test/bc_dex_input/: bc_load_on_demand_type_test.cpp
src/mplfe/test/common/: feir_stmt_test.cpp
src/phases/: BUILD.gn  hello_func_phase.cpp  hello_module_phase.cpp
src/phases/src/: hello_func_phase.cpp  hello_module_phase.cpp
test/: maple_aarch64_with_clang2mpl.sh
testsuite/driver/src/mode/: ASTO0.py  GC_O0.py  GC_O2.py  SCO0_TEST.py  SCO0_TRAIN.py  SCO2_TEST.py  SCO2_TRAIN.py
(+29 files in other folders)
