#
# Copyright (c) [2020-2021] Huawei Technologies Co.,Ltd.All rights reserved.
#
# OpenArkCompiler is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan PSL v2.
# You may obtain a copy of Mulan PSL v2 at:
#
#     http://license.coscl.org.cn/MulanPSL2
#
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
# FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.
#
configs = [ "${MAPLEALL_ROOT}:mapleallcompilecfg" ]
cflags += [
  "-DMIR_FEATURE_FULL=1",
  "-DMPLFE_FULL_INFO_DUMP=1",
  "-DENABLE_COV_CHECK=1",
]

cflags_cc -= [
  "-Werror",
]


include_dirs_dex = [
  "${ANDROID_ROOT}/dalvik",
  "${ANDROID_ROOT}/system/core/include",
]
include_dirs_libdexfile = [
  #for libdexfile -start
  "${ANDROID_ROOT}/system/core/liblog/include",
  "${ANDROID_ROOT}/system/core/libutils/include",
  "${ANDROID_ROOT}/system/core/libnativehelper/include_jni",
  "${ANDROID_ROOT}/system/core/base/include",
  "${ANDROID_ROOT}/system/core/libziparchive/include",
  "${ANDROID_ROOT}/art/libartpalette/include",
  "${ANDROID_ROOT}/art/libartbase",
  "${ANDROID_ROOT}/art/libdexfile",
  "${ANDROID_ROOT}/include",

  #for libdexfile -end
]

include_directories = include_dirs_libdexfile + include_dirs_dex

executable("mplfeUT") {
  sources = []

  include_dirs = include_directories

  deps = [
    ":lib_mplfe_test_ast_input",
    ":lib_mplfe_test_bc_dex_input",
    ":lib_mplfe_test_common",
    ":lib_mplfe_test_jbc_input",
    "${THIRD_PARTY_ROOT}/bounds_checking_function:libHWSecureC",
    "${MAPLEALL_ROOT}/maple_ir:libmplir",
    "${MAPLEALL_ROOT}/maple_util:libmplutil",
    "${MAPLEALL_ROOT}/mempool:libmempool",
    "${MAPLEALL_ROOT}/mpl2mpl:libmpl2mpl",
    "${MPLFE_ROOT}:lib_mplfe_ast_input",
    "${MPLFE_ROOT}:lib_mplfe_bc_input",
    "${MPLFE_ROOT}:lib_mplfe_util",
    "${MPLFE_ROOT}:lib_mplfe_dex_input",
    "${MPLFE_ROOT}:lib_mplfe_jbc_input",
  ]

  ldflags = [
    "-rdynamic",
    "-L${LLVMLIBDIR}/",
    "-Wl,-rpath,${LLVMLIBDIR}/",
    "-Wl,-rpath,${MAPLE_ROOT}/build/gtestlib/lib",
  ]

  libs = [
    "${MAPLE_ROOT}/build/gtestlib/lib/libgmock.so",
    "${MAPLE_ROOT}/build/gtestlib/lib/libgmock_main.so",
    "${MAPLE_ROOT}/build/gtestlib/lib/libgtest.so",
    "${MAPLE_ROOT}/build/gtestlib/lib/libgtest_main.so",
    "z",
    "pthread",
  ]
}

include_ast_input_directories = [
  "${MPLFE_ROOT}/common/include",
  "${MPLFE_ROOT}/ast_input/include",
  "${MPLFE_ROOT}/test/common",
  "${THIRD_PARTY_ROOT}/bounds_checking_function/include",
  "${MAPLEALL_ROOT}/maple_ir/include",
  "${MAPLEALL_ROOT}/maple_util/include",
  "${MAPLEALL_ROOT}/maple_driver/include",
  "${MAPLEALL_ROOT}/mempool/include",
  "${MAPLE_ROOT}/build/gtestlib/include",
]

source_set("lib_mplfe_test_ast_input") {
  sources = [
    "${MPLFE_ROOT}/test/ast_input/ast_expr_test.cpp",
    "${MPLFE_ROOT}/test/ast_input/ast_var_test.cpp",
  ]
  include_dirs = include_ast_input_directories
  output_dir = "${root_out_dir}/ar"
}

include_jbc_input_directories = [
  "${MPLFE_ROOT}/common/include",
  "${MPLFE_ROOT}/jbc_input/include",
  "${MPLFE_ROOT}/test/common",
  "${THIRD_PARTY_ROOT}/bounds_checking_function/include",
  "${MAPLEALL_ROOT}/maple_ir/include",
  "${MAPLEALL_ROOT}/maple_util/include",
  "${MAPLEALL_ROOT}/maple_driver/include",
  "${MAPLEALL_ROOT}/mempool/include",
  "${MAPLE_ROOT}/build/gtestlib/include",
]

source_set("lib_mplfe_test_jbc_input") {
  sources = [
    "${MPLFE_ROOT}/test/jbc_input/jbc_class2fe_helper_test.cpp",
    "${MPLFE_ROOT}/test/jbc_input/jbc_class_const_test.cpp",
    "${MPLFE_ROOT}/test/jbc_input/jbc_class_test.cpp",
    "${MPLFE_ROOT}/test/jbc_input/jbc_function_test.cpp",
    "${MPLFE_ROOT}/test/jbc_input/jbc_opcode_helper_test.cpp",
    "${MPLFE_ROOT}/test/jbc_input/jbc_stack2fe_helper_test.cpp",
    "${MPLFE_ROOT}/test/jbc_input/jbc_stack_helper_test.cpp",
    "${MPLFE_ROOT}/test/jbc_input/jbc_stmt_bb_test.cpp",
    "${MPLFE_ROOT}/test/jbc_input/jbc_stmt_loc_test.cpp",
    "${MPLFE_ROOT}/test/jbc_input/jbc_util_test.cpp",
  ]
  include_dirs = include_jbc_input_directories
  output_dir = "${root_out_dir}/ar"
}

include_common_directories = [
  "${MPLFE_ROOT}/common/include",
  "${MPLFE_ROOT}/jbc_input/include",  # mplfeUT.cpp exists
  "${MPLFE_ROOT}/test/common",
  "${THIRD_PARTY_ROOT}/bounds_checking_function/include",
  "${MAPLEALL_ROOT}/maple_ir/include",
  "${MAPLEALL_ROOT}/maple_util/include",
  "${MAPLEALL_ROOT}/maple_driver/include",
  "${MAPLEALL_ROOT}/mempool/include",
  "${MAPLE_ROOT}/build/gtestlib/include",
]

source_set("lib_mplfe_test_common") {
  sources = [
    "${MPLFE_ROOT}/test/common/base64_test.cpp",
    "${MPLFE_ROOT}/test/common/basic_io_test.cpp",

    # "${MPLFE_ROOT}/test/common/fe_function_process_schedular_test.cpp",
    "${MPLFE_ROOT}/test/common/fe_algorithm_test.cpp",
    "${MPLFE_ROOT}/test/common/fe_file_ops_test.cpp",
    "${MPLFE_ROOT}/test/common/fe_file_type_test.cpp",
    "${MPLFE_ROOT}/test/common/fe_function_test.cpp",
    "${MPLFE_ROOT}/test/common/fe_struct_elem_info_test.cpp",
    "${MPLFE_ROOT}/test/common/fe_type_hierarchy_test.cpp",
    "${MPLFE_ROOT}/test/common/fe_type_manager_test.cpp",
    "${MPLFE_ROOT}/test/common/fe_utils_test.cpp",
    "${MPLFE_ROOT}/test/common/feir_builder_test.cpp",
    "${MPLFE_ROOT}/test/common/feir_stmt_dfg_test.cpp",
    "${MPLFE_ROOT}/test/common/feir_stmt_test.cpp",
    "${MPLFE_ROOT}/test/common/feir_test_base.cpp",
    "${MPLFE_ROOT}/test/common/feir_type_helper_test.cpp",
    "${MPLFE_ROOT}/test/common/feir_type_infer_test.cpp",
    "${MPLFE_ROOT}/test/common/feir_type_test.cpp",
    "${MPLFE_ROOT}/test/common/feir_var_test.cpp",
    "${MPLFE_ROOT}/test/common/mplfeUT.cpp",
    "${MPLFE_ROOT}/test/common/mplfe_ut_options.cpp",
    "${MPLFE_ROOT}/test/common/mplfe_ut_regx.cpp",
    "${MPLFE_ROOT}/test/common/mplfe_ut_regx_test.cpp",
  ]
  include_dirs = include_common_directories
  output_dir = "${root_out_dir}/ar"
}

include_bc_dex_input_directories = [
  "${MPLFE_ROOT}/common/include",
  "${MPLFE_ROOT}/bc_input/include",
  "${MPLFE_ROOT}/dex_input/include",
  "${MPLFE_ROOT}/test/common",
  "${THIRD_PARTY_ROOT}/bounds_checking_function/include",
  "${MAPLEALL_ROOT}/maple_ir/include",
  "${MAPLEALL_ROOT}/maple_util/include",
  "${MAPLEALL_ROOT}/maple_driver/include",
  "${MAPLEALL_ROOT}/mempool/include",
  "${MAPLE_ROOT}/build/gtestlib/include",
]

source_set("lib_mplfe_test_bc_dex_input") {
  sources = [
    "${MPLFE_ROOT}/test/bc_dex_input/bc_load_on_demand_type_test.cpp",
    "${MPLFE_ROOT}/test/bc_dex_input/bc_parser_test.cpp",
    "${MPLFE_ROOT}/test/bc_dex_input/bc_util_test.cpp",
    "${MPLFE_ROOT}/test/bc_dex_input/dex_class_test.cpp",
    "${MPLFE_ROOT}/test/bc_dex_input/dex_file_util_test.cpp",
    "${MPLFE_ROOT}/test/bc_dex_input/dex_op_test.cpp",
    "${MPLFE_ROOT}/test/bc_dex_input/dex_reader_test.cpp",
  ]
  include_dirs = include_bc_dex_input_directories
  output_dir = "${root_out_dir}/ar"
}
